log
Tue Mar 23 21:58:24 UTC 2021: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:35:8: error: ‘List {aka struct List}’ has no member named ‘size’
    list->size=0;
        ^~
At top level:
list.c:32:11: error: ‘createList’ defined but not used [-Werror=unused-function]
     List* createList(){
           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 23 21:58:41 UTC 2021: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List {aka struct List}’ has no member named ‘size’
    list->size=0;
        ^~
list.c: At top level:
list.c:39:6: error: expected identifier or ‘(’ before ‘return’
      return NULL;
      ^~~~~~
list.c:40:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation failed
Tue Mar 23 21:58:58 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:35:8: error: ‘List {aka struct List}’ has no member named ‘size’
    list->size=0;
        ^~
test.c: In function ‘createList’:
test.c:432:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:452:1: error: expected declaration or statement at end of input
 }
 ^
test.c:452:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:432:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
list.c:81:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
 void cleanList(List * list) {
      ^~~~~~~~~
list.c:72:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
 void * popBack(List * list) {
        ^~~~~~~
list.c:59:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
 void pushBack(List * list, const void * data) {
      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 23 21:59:55 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:34:8: error: ‘List {aka struct List}’ has no member named ‘size’
    list->size=0;
        ^~
Compilation failed
Tue Mar 23 22:00:58 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
793b081
Tue Mar 23 22:01:18 UTC 2021: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
72de769
Tue Mar 23 22:35:24 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
298d51a
Tue Mar 23 22:36:16 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
abc20f0
Tue Mar 23 22:37:35 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
96cf9bd
Tue Mar 23 22:38:36 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
2340197
Tue Mar 23 22:39:42 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0ff2db9
Tue Mar 23 22:42:52 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6c109e2
Tue Mar 23 22:43:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b3d16ec
Tue Mar 23 22:49:27 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
51cc14e
Tue Mar 23 22:51:55 UTC 2021: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
ae0b866
Tue Mar 23 22:57:30 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
31c4a9d
Tue Mar 23 23:02:03 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
c05f6fc
Tue Mar 23 23:02:39 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
62d3d3b
Tue Mar 23 23:07:45 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ed218b4
Tue Mar 23 23:09:03 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
668265c
Tue Mar 23 23:10:12 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
0c26f5c
Tue Mar 23 23:46:26 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cb7518c
Tue Mar 23 23:56:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9da74a1
Tue Mar 23 23:56:50 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
430a025
Tue Mar 23 23:58:43 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
bca7abb
Tue Mar 23 23:58:50 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6b6a3ef
Tue Mar 23 23:59:03 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
669a68a
Wed Mar 24 00:01:42 UTC 2021: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
1a08c79
Wed Mar 24 00:01:51 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
96d83ec
Wed Mar 24 00:02:14 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4bff444
Wed Mar 24 00:02:24 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
90d4e70
Wed Mar 24 00:04:13 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c616fae
Wed Mar 24 00:04:27 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ef56db3
Wed Mar 24 00:07:03 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
686ef15
Wed Mar 24 00:08:47 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
619695a
Wed Mar 24 00:08:58 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1888549
Wed Mar 24 00:09:10 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
937a18d
Wed Mar 24 00:13:55 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
f88f13b
Wed Mar 24 00:14:57 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1eeb682
Wed Mar 24 00:16:33 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5b08ac5
Wed Mar 24 00:16:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bfe928c
Wed Mar 24 00:20:40 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9d08649
Wed Mar 24 00:20:56 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1d9b082
Wed Mar 24 00:37:58 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
50a1a8f
Wed Mar 24 00:38:13 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5082d3d
Wed Mar 24 00:51:37 UTC 2021: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
c38a2a3
Wed Mar 24 15:02:15 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
540369e
Wed Mar 24 15:02:45 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
c188160
Wed Mar 24 15:02:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
da1cb58
Wed Mar 24 15:03:08 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9923f10
Wed Mar 24 15:03:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
138162e
